# Pokedex

./: CMakeLists.txt  README.md  main.cpp  main.h  menu.cpp  menu.h
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  dynamic-array.h  input.cpp  input.h  main.cpp  menu.h  pokedex.cpp  pokedex.h  pokemon.h
